--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,14 @@
-﻿  resources:
-- repo: self
+﻿# ASP.NET Core
+# Build and test ASP.NET Core web applications targeting .NET Core.
+# Add steps that run tests, create a NuGet package, deploy, and more:
+# https://docs.microsoft.com/vsts/pipelines/languages/dotnet-core
 
 pool:
-  vmImage: Hosted VS2017
-  demands: msbuild
+  vmImage: 'VS2017-Win2016'
 
 variables:
-  buildConfiguration: 'release'
+  buildConfiguration: 'Release'
 
 steps:
-- task: DotNetCoreInstaller@0
-  displayName: 'Use .NET Core sdk 2.1.503'
-  inputs:
-    version: 2.1.503
-
-- task: NuGetToolInstaller@0
-  displayName: 'Use NuGet 4.9.3'
-  inputs:
-    versionSpec: 4.9.3
-
-- task: NuGetCommand@2
-  displayName: 'NuGet restore'
-
-- task: MSBuild@1
-  displayName: 'Build solution **/*.sln'
-  inputs:
-    configuration: $(buildConfiguration)
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
