Fixed Contextmenu. Added default border around non-fullsize, until I can make a better solution. Added editor to test app, got everything setup.

--- a/test/BlazacoTestApp/BlazacoTestApp.csproj
+++ b/test/BlazacoTestApp/BlazacoTestApp.csproj
@@ -15,4 +15,8 @@
     <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Blazaco\Blazaco.csproj" />
+  </ItemGroup>
+
 </Project>
