--- a/src/Blazaco/Blazaco.csproj
+++ b/src/Blazaco/Blazaco.csproj
@@ -23,15 +23,15 @@
 https://github.com/Kyle-Undefined/Blazaco/blob/master/CHANGELOG.md</PackageReleaseNotes>
 	<Version>1.0.0</Version>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <EmbeddedResource Include="content\**\*.js" LogicalName="blazor:js:%(RecursiveDir)%(Filename)%(Extension)" />
     <EmbeddedResource Include="content\**\*.css" LogicalName="blazor:css:%(RecursiveDir)%(Filename)%(Extension)" />
     <EmbeddedResource Include="content\**" Exclude="**\*.js;**\*.css" LogicalName="blazor:file:%(RecursiveDir)%(Filename)%(Extension)" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Browser" Version="3.0.0-preview5-19227-01" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
   </ItemGroup>
-  
+
 </Project>
